@@ -1,7 +1,11 @@
 
 4.27  2013-08-25
+  - Added acceptors acceptors to Mojo::Server::Daemon.
+  - Added handle method to Mojo::IOLoop::Server.
   - Added reuse option to Mojo::IOLoop::Server::listen.
   - Added reuse parameter to Mojo::Server::Daemon::listen.
+  - Fixed console message bug in Mojo::Server::Daemon.
+  - Fixed SNI bug in online tests.
 
 4.26  2013-08-18
   - Fixed support for Netscape cookies in Mojo::Cookie::Response.
